# vector-db-benchmark

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
vector_db_benchmark/: __init__.py  config.py
vector_db_benchmark/benchmark/: __init__.py  main.py  runner.py  schemas.py  tasks.py
vector_db_benchmark/completion/: __init__.py  base.py  bedrock.py  config.py  factory.py
vector_db_benchmark/databases/: base.py  chroma_db.py  config.py  factory.py  lance_db.py  milvus_lite_db.py  qdrant_db.py  s3_vectors_db.py
vector_db_benchmark/embedding/: __init__.py  base.py  bedrock_embedder.py  config.py  factory.py  local_embedder.py
vector_db_benchmark/services/: __init__.py  aws.py  storage.py
vector_db_benchmark/utils/: __init__.py  consolidate_results.py  document_manager.py  export_benchmark_data.py  logging_config.py  metrics.py  query_generator.py  text_extractor.py  visualize_benchmark.py
